[tool.poetry]
name = 'reddit-get'
version = "1.1.0"
description = 'A CLI to get reddit content'
authors = ['Michael Lane <mikelane@gmail.com>']
license = 'MIT'
readme = 'README.md'
homepage = 'https://github.com/mikelane/reddit-get'
repository = 'https://github.com/mikelane/reddit-get'
keywords = ['reddit', 'cli']
classifiers = [
    'Environment :: Console',
]
include = [
    'LICENSE',
]

[tool.poetry.scripts]
reddit-get = 'reddit_get.cli:main'

[tool.poetry.dependencies]
python = '>=3.8.0, <4.0.0'
fire = "^0.5.0"
praw = "^7.7.0"
toml = "^0.10.2"
titlecase = "^2.4"
typing-extensions = "^4.6.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.2"
ruff = ">=0.0.269,<0.1.2"

[tool.poetry.group.test.dependencies]
pydantic = ">=1.10.8,<3.0.0"
pytest = "^7.3.1"
pytest-console-scripts = "^1.4.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-picked = ">=0.4.6,<0.6.0"
pytest-sugar = "^0.9.7"
pytest-xdist = "^3.3.1"
tox = "^4.5.1"
types-toml = "^0.10.8.6"

[tool.pytest.ini_options]
minversion = '7.2'
addopts = [
  "-ra", 
  "-vvv",
  "-l",
  "--doctest-modules",
  "--color=yes",
  "--code-highlight=yes",
  "--log-disable=faker",
  "--log-disable=asyncio",
]
testpaths = [".", "tests"]
python_functions = ['test_*', 'it_*']
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS"
]
log_cli = true
log_cli_level = "WARNING"
log_auto_indent = true

[tool.black]
line-length = 110
skip-string-normalization = true
target-version = ['py311']
include = '.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2

[tool.ruff]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "BLE",
    "C",
    "C4",
    "COM",
    "D",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FBT",
    "G",
    "I",
    "INP",
    "N",
    "PGH",
    "PIE",
    "PLE",
    "PLR",
    "PT",
    "PTH",
    "Q",
    "RSE",
    "RET",
    "S",
    "SIM",
    "SLF",
    "T20",
    "TID",
    "TCH",
    "W",
    "YTT"
]
ignore = [
    "ANN101",  # TODO: Remove this once beartype supports the Self type.
    "TCH001",  # Since we use beartype, our type checks happen at runtime, so we don't want htem in a type-checking block
    "PLE1205",  # Loguru uses template strings, so this error is not applicable.
]

fixable = [
    "A",
    "ANN",
    "B",
    "C4",
    "COM",
    "D",
    "E",
    "F",
    "G",
    "I",
    "PIE",
    "PLR",
    "PLW",
    "PT",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "TCH",
    "TID",
    "TRY",
    "W"
]
unfixable = []

fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
"tests/**/*.py" = ["ANN201", "ANN001", "D100", "D103", "S101"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
