[tool.poetry]
name = 'reddit-get'
version = "1.1.0"
description = 'A CLI to get reddit content'
authors = ['Michael Lane <mikelane@gmail.com>']
license = 'MIT'
readme = 'README.md'
homepage = 'https://github.com/mikelane/reddit-get'
repository = 'https://github.com/mikelane/reddit-get'
keywords = ['reddit', 'cli']
classifiers = [
    'Environment :: Console',
]
include = [
    'LICENSE',
]

[tool.poetry.scripts]
reddit-get = 'reddit_get.cli:main'

[tool.poetry.dependencies]
python = '>=3.11.0, <4.0.0'
fire = ">=0.5,<0.8"
praw = "^7.7.0"
titlecase = "^2.4"
toml = "^0.10.2"
typing-extensions = "^4.6.0"

[tool.poetry.group.lint.dependencies]
black = ">=23.3,<27.0"
isort = ">=5.12,<8.0"
mypy = "^1.3.0"
pre-commit = ">=3.3.2,<5.0.0"
ruff = ">=0.5.1,<0.15.1"

[tool.poetry.group.test.dependencies]
attrs = "^25.3.0"
pydantic = ">=1.10.8,<3.0.0"
pytest = ">=7.3.1,<10.0.0"
pytest-console-scripts = "^1.4.0"
pytest-cov = ">=4,<8"
pytest-mock = "^3.10.0"
pytest-picked = ">=0.4.6,<0.6.0"
pytest-sugar = ">=0.9.7,<1.2.0"
pytest-xdist = "^3.3.1"
tox = "^4.5.1"
types-toml = "^0.10.8.6"

[tool.pytest.ini_options]
minversion = '7.2'
addopts = [
  "-ra", 
  "-vvv",
  "-l",
  "--doctest-modules",
  "--color=yes",
  "--code-highlight=yes",
  "--log-disable=faker",
  "--log-disable=asyncio",
]
testpaths = [".", "tests"]
python_functions = ['test_*', 'it_*']
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS"
]
log_cli = true
log_cli_level = "WARNING"
log_auto_indent = true

[tool.black]
line-length = 110
skip-string-normalization = true
target-version = ['py314']
include = '.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 2

[tool.ruff]
# Same as Black.
line-length = 120
target-version = "py314"
fix = true

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins
    "ANN",    # flake8-annotations
    "ARG",    # flake8-unused-arguments
    "ASYNC",  # flake8-async
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except
    "C4",     # flake8-comprehensions
    "C90",    # mccabe
    "COM",    # flake8-commas
    "D",      # pydocstyle
    "DTZ",    # flake8-datetimez
    "E",      # pycodestyle errors
    "ERA",    # eradicate
    "F",      # pyflakes
    "FA",     # flake8-future-annotations
    "FBT",    # flake8-boolean-trap
    "FLY",    # flynt
    "FURB",   # refurb
    "G",      # flake8-logging-format
    "I",      # isort
    "ICN",    # flake8-import-conventions
    "INP",    # flake8-no-pep420
    "INT",    # flake8-gettext
    "LOG",    # flake8-logging
    "N",      # pep8-naming
    "NPY",    # numpy-specific rules
    "PD",     # pandas-vet
    "PERF",   # perflint
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "PL",     # pylint
    "PT",     # flake8-pytest-style
    "PTH",    # flake8-use-pathlib
    "PYI",    # flake8-pyi
    "Q",      # flake8-quotes
    "RET",    # flake8-return
    "RSE",    # flake8-raise
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit
    "SIM",    # flake8-simplify
    "SLF",    # flake8-self
    "SLOT",   # flake8-slots
    "T10",    # flake8-debugger
    "T20",    # flake8-print
    "TC",     # flake8-type-checking (was TCH)
    "TID",    # flake8-tidy-imports
    "TRY",    # tryceratops
    "UP",     # pyupgrade
    "W",      # pycodestyle warnings
    "YTT",    # flake8-2020
]

ignore = [
    "TC001",   # Type checking imports - we don't use TYPE_CHECKING blocks
    "PLE1205", # Loguru uses template strings
    "COM812",  # Conflicts with formatter
    "ISC001",  # Conflicts with formatter
]

fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]  # Module level import not at top, unused imports, star imports
"tests/**/*.py" = ["ANN", "D", "S101", "ARG", "PT", "SLF"]  # Relax rules for tests

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
force-single-line = false
force-sort-within-sections = true
known-first-party = ["reddit_get"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 15
max-returns = 6
max-statements = 50

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'
